# chainlit_agent_assighment

./: .env.example  pyproject.toml
src/chainlit_agent_assignment/agent_core/: agent.py
src/chainlit_agent_assignment/chat_ui/: app.py
